<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/content_provider_example"
        android:textColor="@color/purple_700"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edit1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:hint="@string/name"
        android:layout_alignStart="@id/text1"
        android:inputType="text"
        android:layout_alignEnd="@id/text1" />

    <EditText
        android:id="@+id/edit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit1"
        android:hint="@string/grade"
        android:inputType="number"
        android:layout_alignStart="@id/text1"
        android:layout_alignEnd="@id/text1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit2"
        android:layout_alignStart="@id/text1"
        android:layout_alignEnd="@id/text1"
        android:background="@color/teal_700"
        android:onClick="onClickAddItem"
        android:layout_marginTop="10dp"
        android:text="@string/add_item" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button1"
        android:layout_alignStart="@id/text1"
        android:layout_alignEnd="@id/text1"
        android:background="@color/teal_700"
        android:layout_marginTop="10dp"
        android:onClick="onClickDeleteItem"
        android:text="@string/delete_item" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:layout_alignStart="@id/text1"
        android:layout_alignEnd="@id/text1"
        android:layout_marginTop="10dp"
        android:background="@color/teal_700"
        android:onClick="onClickSearchForItem"
        android:text="@string/search_by_name" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button3"
        android:layout_alignStart="@id/text1"
        android:layout_alignEnd="@id/text1"
        android:layout_marginTop="10dp"
        android:background="@color/teal_700"
        android:onClick="onClickRetrieveAll"
        android:text="@string/show_all" />

</RelativeLayout>